Fix incorrect scroll position behavior on Safari by switching to use window.scrollTo. Rename Donate section title to Support Us

--- a/src/views/annual-report/annual-report.scss
+++ b/src/views/annual-report/annual-report.scss
@@ -60,11 +60,6 @@ p {
     }
 }
 
-.section {
-    // This is the height of the sub nav + height of the site nav - a few pixels...
-    scroll-margin-top: 104px;
-}
-
 .message-section {
     background-color: $ui-blue;
 
